# bb8_moving_squareROS

./: CMakeLists.txt  README.md  package.xml
launch/: bb8_move_in_square_service_client.launch  bb8_move_in_square_service_server.launch  call_bb8_move_in_square_custom_service_server.launch  start_bb8_move_custom_service_server.launch
my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
my_custom_srv_msg_pkg/src/: custom_service_server.py
my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
src/: bb8_move_custom_service_client.py  bb8_move_custom_service_server.py  bb8_move_in_square_service_client.py  bb8_move_in_square_service_server.py  move_bb8.py
